<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:ignore="NewApi">
    <FrameLayout
        android:id="@+id/frame_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    </FrameLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/custom_actionbar_setting">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="CHANGE PASSWORD"
            android:layout_centerVertical="true"
            android:layout_centerInParent="true"
            android:textColor="@android:color/white"
            android:textSize="22sp"/>
        <ImageView
            android:id="@+id/back_arrow"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:paddingTop="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back_arrow"/>
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="60dp"
        android:background="@color/changepwd_page_bg"
        android:gravity="start"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">
        <EditText
            android:id="@+id/old_pwd_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_square_white"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:textSize="17sp"
            android:textColorHint="@color/edittxt_hint"
            android:textColor="@color/edittxt_txt"
            android:hint="@string/old_pwd"
            android:nextFocusDown="@+id/new_pwd_txt"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"/>

        <EditText
            android:id="@+id/new_pwd_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:nextFocusDown="@+id/confirm_pwd_txt"
            android:background="@drawable/rounded_square_white"
            android:hint="@string/new_pwd"
            android:textSize="17sp"
            android:textColorHint="@color/edittxt_hint"
            android:textColor="@color/edittxt_txt"
            android:padding="10dp"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"/>
        <EditText
            android:id="@+id/confirm_pwd_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:nextFocusDown="@+id/change_pwd_submit"
            android:background="@drawable/rounded_square_white"
            android:hint="@string/confirm_pwd"
            android:textSize="17sp"
            android:textColorHint="@color/edittxt_hint"
            android:textColor="@color/edittxt_txt"
            android:padding="10dp"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"/>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/change_pwd_submit_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:background="@color/custom_actionbar_setting">
        <TextView
            android:id="@+id/change_pwd_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Submit"
            android:layout_centerVertical="true"
            android:layout_centerInParent="true"
            android:textColor="@android:color/white"
            android:textSize="22sp"/>
    </RelativeLayout>
</RelativeLayout>