<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/register_page_bg"
    tools:ignore="NewApi">
    <RelativeLayout
        android:id="@+id/license_actionbar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/custom_pactionbar_bg">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/back_arrow"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:src="@drawable/back_arrow"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Profile"
            android:layout_centerInParent="true"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="35sp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <ProgressBar
            android:id="@+id/progbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"/>
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="70dp"
        android:gravity="center"
        android:orientation="vertical">
        <ScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/activity_horizontal_margin">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:paddingBottom="20dp"
                        android:orientation="horizontal"
                        android:weightSum="4">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:layout_weight="1">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:textStyle="normal"
                                android:text="@string/emptyseats"
                                android:textSize="19sp"
                                android:id="@+id/acc_lbl" />
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:layout_weight="3">
                            <EditText
                                android:id="@+id/empty_seats_ed"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/rounded_square_white"
                                android:textSize="20sp"
                                android:textColorHint="@color/edittxt_hint"
                                android:textColor="@color/edittxt_txt"
                                android:paddingLeft="10dp"
                                android:paddingTop="10dp"
                                android:paddingRight="10dp"
                                android:paddingBottom="10dp"
                                android:imeOptions="actionUnspecified"
                                android:inputType="number"
                                android:maxLines="1"
                                android:singleLine="true"/>
                        </LinearLayout>
                    </LinearLayout>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingBottom="20dp"
                        android:textStyle="italic"
                        android:text="@string/egemptyseats"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingBottom="10dp"
                        android:textStyle="bold"
                        android:textSize="19sp"
                        android:text="Driver Licence"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingBottom="5dp"
                        android:text="@string/reqlicense"/>

                    <ImageView
                        android:id="@+id/driver_license"
                        android:layout_width="wrap_content"
                        android:layout_height="230dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/default_license_pic"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingTop="5dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">
                        <CheckBox
                            android:id="@+id/checkbox"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:button="@xml/custom_checkbox"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:text="@string/terms"/>
                    </LinearLayout>

                    <TextView
                        android:id="@+id/save_txv"
                        style="?android:textAppearanceSmall"
                        android:layout_marginLeft="40dp"
                        android:layout_marginRight="40dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/rounded_square_blue"
                        android:textSize="20sp"
                        android:gravity="center"
                        android:text="@string/save"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"/>
                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
    <FrameLayout
        android:id="@+id/frame_layout"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/loginbg">
    </FrameLayout>
</FrameLayout>