<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/register_page_bg"
    tools:ignore="NewApi">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/custom_pactionbar_bg">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/back_arrow"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:src="@drawable/back_arrow"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Verification"
            android:layout_centerInParent="true"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="35sp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <ProgressBar
            android:id="@+id/progbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"/>
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="70dp"
        android:gravity="center"
        android:orientation="vertical">
        <ScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/activity_horizontal_margin">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="visible"
                    android:id="@+id/phone_frame"
                    android:gravity="center"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/dark_blue"
                        android:textStyle="normal"
                        android:gravity="center"
                        android:text="Enter your mobile number below to get started"
                        android:textSize="20sp"
                        android:id="@+id/acc_lbl" />

                    <EditText
                        android:id="@+id/phone_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="40dp"
                        android:background="@drawable/rounded_square_white"
                        android:hint="@string/phone"
                        android:textSize="20sp"
                        android:textColorHint="@color/edittxt_hint"
                        android:textColor="@color/edittxt_txt"
                        android:paddingLeft="10dp"
                        android:paddingTop="10dp"
                        android:paddingRight="10dp"
                        android:paddingBottom="10dp"
                        android:imeOptions="actionUnspecified"
                        android:inputType="number"
                        android:maxLines="1"
                        android:singleLine="true"/>
                    <TextView
                        android:id="@+id/submit_txv"
                        style="?android:textAppearanceSmall"
                        android:layout_marginLeft="40dp"
                        android:layout_marginRight="40dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="40dp"
                        android:background="@drawable/rounded_square_blue"
                        android:textSize="20sp"
                        android:gravity="center"
                        android:text="@string/submit"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/verify_frame"
                    android:gravity="center"
                    android:visibility="gone"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/dark_blue"
                        android:textStyle="normal"
                        android:gravity="center"
                        android:text="Enter the verification code you got by text message"
                        android:textSize="20sp"
                        android:id="@+id/verify_lbl" />

                    <EditText
                        android:id="@+id/otp_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="40dp"
                        android:background="@drawable/rounded_square_white"
                        android:hint="@string/otp"
                        android:textSize="20sp"
                        android:textColorHint="@color/edittxt_hint"
                        android:textColor="@color/edittxt_txt"
                        android:paddingLeft="10dp"
                        android:paddingTop="10dp"
                        android:paddingRight="10dp"
                        android:paddingBottom="10dp"
                        android:imeOptions="actionUnspecified"
                        android:inputType="number"
                        android:maxLines="1"
                        android:singleLine="true"/>
                    <TextView
                        android:id="@+id/submitotp_txv"
                        style="?android:textAppearanceSmall"
                        android:layout_marginLeft="40dp"
                        android:layout_marginRight="40dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="40dp"
                        android:background="@drawable/rounded_square_blue"
                        android:textSize="20sp"
                        android:gravity="center"
                        android:text="@string/submit"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"/>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</FrameLayout>